# MyQuant-

./: .gitignore  config.yaml  main.py  pyproject.toml  pytest.ini  pytest_e2e.ini  requirements.txt  start.sh  start_api.sh  stop.sh
api/: __init__.py  __main__.py  app.py  db_ext.py  deps.py  runner.py  schemas.py
data/: chart_indicators.json
docs/: INDEX.md  JOURNAL.md
logs/: README.md
migrations/: 001_create_schema_version.sql  002_create_strategy.sql  003_create_backtest_result.sql  004_create_dataset_meta.sql  005_alter_evolution_task.sql  006_mtf_support.sql  008_strategy_dedup.sql
scripts/: api_run.py  dev.sh  restart.sh  start.sh  stop.sh
tests/: conftest.py  test_api.py  test_batch_evaluation.py  test_boundary_p0.py  test_boundary_p1p2.py  test_c1_momentum_e2e.py  test_candlestick_patterns.py  test_champion.py  test_csv_importer.py  test_db_ext.py  test_discovery.py  test_dna.py  test_engine_phaseA_sltp.py  test_engine_phaseB_funding.py  test_engine_phaseC_wf_mtf.py  test_engine_phaseD_evolution_validator.py  test_engine_phaseE_layer_limit.py  test_engine_phaseF_degradation.py  test_engine_phaseG_data_alignment.py  test_evolution.py  test_evolution_arch.py  test_evolution_flow.py  test_evolution_v3.py  test_exceptions.py  test_executor_backtest.py  test_fetcher.py  test_indicator_profile.py  test_indicators.py  test_integration.py  test_leverage_short.py  test_mtf.py  test_mtf_engine.py  test_mtf_evolution.py  test_mtf_integration.py  test_mtf_phase1_data_pipeline.py  test_mtf_phase2_signal_combination.py  test_mtf_phase3_evolution.py  test_patterns.py  (+41 more)
(+259 files in other folders)
