[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MyQuant"
version = "0.13.0"
description = "BTC/ETH 量化交易策略进化工具"
authors = [{name = "MyQuant Team"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-binance>=1.0.19",
    "vectorbt>=0.26.1",
    "pandas-ta>=0.3.14b",
    "deap>=1.4.1",
    "plotly>=5.22.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pyarrow>=16.0.0",
    "pyyaml>=6.0",
    "anthropic>=0.30.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "httpx>=0.24.0",
    "python-multipart>=0.0.6",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]

[project.scripts]
myquant = "MyQuant.main:main"
